<resources>
    <string name="app_name">Devoir 3</string>
    <string name="email">Email</string>
    <string name="mdp">Mot de passe</string>
    <string name="Connexion">Connexion</string>
    <string name="exempleemail">prenom.nom@udem.ca</string>
    <string name="Succes">Succès!</string>
    <string name="Echec">Mot de passe incorrect</string>
    <string name="NoExist">Pas d\'usager associé au email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Inscription">Inscription</string>
    <string name="mdp_confirmer">Confirmer le mot de passe</string>


    <string name="message1">Bonjour</string>
    <string name="message2">Bonjour</string>
    <string name="message3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ornare ac nisi at vehicula. Duis posuere eros a libero consectetur laoreet vitae aliquam tellus. Duis ut malesuada elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ornare ac nisi at vehicula. Duis posuere eros a libero consectetur laoreet vitae aliquam tellus. Duis ut malesuada elit.</string>
    <string name="message4">Nulla facilisi. Ut placerat augue lacus, sit amet vulputate justo elementum ut. </string>

    <string name="app_name">user_profile</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>